# hs-groceries

./: CHANGELOG.md  Dockerfile  fly.toml  hs-groceries.cabal
app/: Main.hs  Views.hs
db/: create-db.sql
src/: GroceriesLib.hs
static/: site.css
